Major update to security - Format code - Remove UnsupportedEncodingException exception with StandardCharsets.UTF_8 - Change logger message